tests/test_assets/semantic/invalid/expressions/comparison_numeric_mismatch.cog
test::() {
    a: i32 = 1;
    b: i64 = 2;

    a == b;
    a < b;
}