tests/test_assets/semantic/invalid/expressions/comparison_numeric_mismatch.expected
semantic error at line 5: comparison operands have incompatible numeric types
semantic error at line 6: comparison operands have incompatible numeric types
2 semantic errors generated.
